# qualcomm___geniex-qairt-plugin

./: .clang-format  .gitignore  .gitmodules  .licenseignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  MODEL_FAMILY_CONSOLIDATION_ANALYSIS.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_android.sh  refactor.md  vcpkg.json
.claude/rules/: engineering-principles.md  npu-constraints.md
.claude/skills/add-model/: SKILL.md
.claude/skills/convert-xtensor-to-qnn/: SKILL.md
.claude/skills/dev-qairt-runtime/: SKILL.md
.claude/skills/write-xtensor/: SKILL.md
.github/workflows/: README.md  Readme.md  build-and-test.yml  build-check.yml  coverage.yml  lint.yml
core/include/: geniex_export.h  graph.h  logging.h  model.h  runtime.h  types.h  utils.h  version.h
core/include/llm/: input_provider.h  llm_model.h  llm_spec_loader.h  llm_types.h  llm_utils.h  position_encoder.h  xtensor_utils.h
core/include/pipeline/: chat_template.h  llm_pipeline.h  vlm_pipeline.h
core/include/vlm/: audio_encoder.h  audio_utils.h  vision_encoder.h  vit_utils.h  vlm_input_provider.h  vlm_model.h  vlm_types.h  vlm_utils.h
core/src/: graph.cpp  logging.cpp  model.cpp  model_init.cpp  runtime.cpp  utils.cpp
core/src/llm/: input_provider.cpp  llm_model.cpp  llm_spec_loader.cpp  llm_utils.cpp  position_encoder.cpp  xtensor_utils.cpp
core/src/pipeline/: chat_template.cpp  llm_pipeline.cpp  vlm_pipeline.cpp
core/src/vlm/: audio_encoder.cpp  audio_utils.cpp  vision_encoder.cpp  vit_utils.cpp  vlm_input_provider.cpp  vlm_model.cpp  vlm_utils.cpp
docs/: README.md  engineering_principle.md  qnn-net-run.md  xtensor-prompt.md  xtensor2qnn.md
examples/: CMakeLists.txt
examples/auto_llm/: CMakeLists.txt  README.md  auto_llm.cpp  auto_llm.h
examples/continuous_batching/: CMakeLists.txt  README.md
examples/continuous_batching/common/cb/: cb.h  cb_llm_model.h  input_provider.h  kv_cache_manager.h  scheduler.h  session.h  token_sampler.h
examples/continuous_batching/llama3_2/: CMakeLists.txt  llama3_2_cb.h  llama3_2_cb_example.cpp
examples/continuous_batching/qwen3/: CMakeLists.txt  qwen3_cb.h  qwen3_cb_example.cpp
geniex-app/src/: geniex-utils.cpp  geniex-utils.h
geniex-app/src/MmappedFile/src/: MmappedFile.cpp
geniex-app/src/qnn-api/: QnnApi.cpp
models/: dispatch.h  llm_model_registry.h  vlm_model_registry.h
models/falcon3/: CMakeLists.txt  falcon3.h  falcon3_7b_aihub_example.cpp  falcon3_7b_example.cpp
models/granite4/: CMakeLists.txt  granite4.h  granite4_micro_example.cpp  granite4_micro_pipeline.cpp
models/llama3/: CMakeLists.txt  llama3.h  llama3_2_1b_example.cpp  llama3_2_3b_example.cpp  llama_v3_8b_instruct_aihub_example.cpp  llama_v3_8b_instruct_example.cpp  llama_v3_elyza_jp_8b_aihub_example.cpp  llama_v3_elyza_jp_8b_example.cpp  llama_v3_taide_8b_chat_aihub_example.cpp  llama_v3_taide_8b_chat_example.cpp
models/llama3_1/: CMakeLists.txt  llama3_1.h  llama3_1_8b_aihub_example.cpp  llama3_1_8b_example.cpp  sea_lion_8b_aihub_example.cpp  sea_lion_8b_example.cpp
models/llama3_2/: CMakeLists.txt  llama3_2.h  llama3_2_1b_aihub_example.cpp  llama3_2_1b_example.cpp  llama3_2_3b_aihub_example.cpp  llama3_2_3b_example.cpp
models/llama3_2_ssd/: CMakeLists.txt  README.md  llama3_2_ssd.h  llama3_2_ssd_example.cpp  ssd_model.cpp  ssd_model.h  ssd_types.h
models/phi3_5/: CMakeLists.txt  phi3_5.h  phi3_5_aihub_example.cpp  phi3_5_example.cpp
models/phi4/: CMakeLists.txt  phi4.h  phi4_example.cpp
models/qwen2-omni/: CMakeLists.txt  qwen2_omni.cpp  qwen2_omni.h  qwen2_omni_example.cpp
models/qwen2_5/: CMakeLists.txt  qwen2_5.h  qwen2_5_7b_instruct_aihub_example.cpp  qwen2_5_7b_instruct_example.cpp
models/qwen2_5_vl/: CMakeLists.txt  README.md  qwen2_5_vl.cpp  qwen2_5_vl.h  qwen2_5_vl_7b_example.cpp  qwen2_5_vl_7b_pipeline.cpp
models/qwen3/: CMakeLists.txt  qwen3.h  qwen3_1_7b_example.cpp  qwen3_4b_aihub_example.cpp  qwen3_4b_example.cpp  qwen3_4b_instruct_2507_example.cpp  qwen3_4b_instruct_2507_pipeline.cpp  qwen3_4b_instruct_aihub_example.cpp  qwen3_4b_xtensor_example.cpp  qwen3_8b_example.cpp
models/qwen3_cb/: CMakeLists.txt  README.md  qwen3_cb.h  qwen3_cb_example.cpp
models/qwen3_vl/: CMakeLists.txt  qwen3_vl.cpp  qwen3_vl.h  qwen3_vl_4b_example.cpp  qwen3_vl_8b_pipeline.cpp
qnn-api/: .clang-format  README.md
qnn-api/src/: IOTensor.cpp  QnnApiUtils.cpp
scripts/: README.md  coverage.ps1  coverage_common.py  diff_coverage.py
tests/: CMakeLists.txt  README.md  chat_template_test.cpp  generation_smoke_llm.cpp  generation_smoke_vlm.cpp  llm.cpp  spec_loader_dump.cpp  vlm.cpp
tests/core/: graph_test.cpp  model_test.cpp  utils_test.cpp
tests/core/llm/: input_provider_test.cpp  llm_model_test.cpp  llm_utils_test.cpp
tests/core/vlm/: vit_utils_test.cpp  vlm_input_provider_test.cpp  vlm_model_test.cpp  vlm_utils_test.cpp
tests/data/: .gitignore  README.md
tests/testing/: graph_info_builder.hpp  llm_fixture.hpp  stub_qnnapi.cpp  stub_qnnapi.hpp
